# rednote-spider

./: .env.example  .gitignore  BEGINNER_GUIDE.md  DEVELOPER_GUIDE.md  PRODUCT_OPPORTUNITY_GUIDE.md  README.md  SCHEDULER_GUIDE.md  SCRIPTS_GUIDE.md  USAGE.md  pyproject.toml
scripts/: ci_migration_gate.py  init_schema.py  manage_discover_keywords.py  run_discover_cycle.py  run_external_crawler.py  run_login_qr_worker.py  run_managed_scheduler.py  run_mediacrawler_login_only.py  run_mediacrawler_with_terminal_qr.py  run_product_opportunity_cycle.py  run_scheduled_cycle.sh  run_scheduled_loop.sh  run_ui_server.sh  send_login_expiry_alert.py  start_app.sh  test_llm_request.py  verify_live_crawl.py
tests/: test_command_template_runner.py  test_config.py  test_crawl_task_service.py  test_database.py  test_discover_collectors.py  test_discover_service.py  test_init_schema_script.py  test_keyword_crawl_service.py  test_login_controller.py  test_login_controller_service.py  test_login_runtime_events.py  test_manual_task_pipeline_service.py  test_mediacrawler_login_runtime.py  test_mediacrawler_phone.py  test_mediacrawler_qr.py  test_mediacrawler_runtime.py  test_observability.py  test_opportunity_llm.py  test_product_opportunity_service.py  test_raw_ingest_service.py  test_run_discover_cycle_script.py  test_run_external_crawler_script.py  test_run_managed_scheduler_script.py  test_run_product_opportunity_cycle_script.py  test_scheduler_config_service.py  test_schema.py  test_send_login_expiry_alert.py  test_ui_app_helpers.py  test_ui_security.py  test_verify_live_crawl_script.py
(+55 files in other folders)
